# python-sample-microservice

./: .gitignore  .gitmodules  BUILD.bazel  Dockerfile  MODULE.bazel  pyproject.toml
deploy/: deploy.sh  document-web-app-deployment.yaml  document-web-app-service.yaml  document-web-app-svc.yaml  mongodb-replicaset.yaml  mongodb-statefulset.yaml  mongodb-svc.yaml  mongodb-user-password-secret.yaml  nginx-ingress-class.yaml  nginx-ingress.yaml
src/: config.py  database.py  main.py  run.py
src/documents/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
