module(
    name = "document-web-app",
    version = "0.1.0",
    compatibility_level = 1,
)


bazel_dep(name = "aspect_bazel_lib", version = "1.36.0")
bazel_dep(name = "rules_pkg", version = "0.9.1")


bazel_dep(name = "rules_python", version = "0.21.0")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_10",
    python_version = "3.10",
)
use_repo(python, "python3_10_toolchains")

register_toolchains("@python3_10_toolchains//:all")


bazel_dep(name = "rules_poetry", version = "0.2.0")

poetry = use_extension("@rules_poetry//python:extensions.bzl", "poetry")
poetry.parse(
    name = "poetry",
    lock = "//:poetry.lock",
)

use_repo(poetry, "poetry")


bazel_dep(name = "rules_oci", version = "1.4.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python_base",
    digest = "sha256:844b3044eef9d990d3c640e046241ac3963cf6bf4a4cd6b831bf3e1752687698",
    image = "index.docker.io/library/python",
    platforms = [
        "linux/386",
        "linux/amd64",
        "linux/arm/v5",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/s390x",
    ],
)

use_repo(oci, "python_base")
